--- a/question_1.html
+++ b/question_1.html
@@ -11,6 +11,95 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Tech Solutions</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <header style="background-image: url('images.jpg');">
+        <p style="color: white; text-align: center; align-self: center;">Welcome</p>
+    </header>
+    <div class="row">
+        <h2>Services</h2>
+
+        <div class="card col">
+            <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
+              <img src="service1.jpg" class="img-fluid"/>
+              <a href="#!">
+                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Cloud Services</h5>
+              <p class="card-text">Delivering scalable cloud solutions, including migration, management, and optimization, to enhance flexibility, 
+                accessibility, and cost-efficiency for businesses.</p>
+            </div>
+          </div>
+
+          <div class="card col">
+            <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
+              <img src="service2.jpg" class="img-fluid"/>
+              <a href="#!">
+                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Comprehensive IT Support</h5>
+              <p class="card-text">Offering 24/7 technical assistance and troubleshooting to ensure minimal downtime and uninterrupted business operations.</p>
+            </div>
+          </div>
+
+          <div class="card col">
+            <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
+              <img src="service3.jpg" class="img-fluid"/>
+              <a href="#!">
+                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Cybersecurity Services</h5>
+              <p class="card-text">Implementing robust security measures, including threat detection, vulnerability assessments, and data protection, to 
+                safeguard sensitive information and prevent cyber attacks.</p>
+            </div>
+          </div>
+    </div>
+
+    <button type="button" class="btn btn-primary btn-rounded" data-mdb-ripple-init>Click Me</button>
+    <button type="button" class="btn btn-secondary btn-rounded" data-mdb-ripple-init>Click Me</button>
     
+
+    <footer class="row bg-body-tertiary text-center text-lg-start fixed-bottom">
+
+        <div class="col-4 align-items-start align-self p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+          <a class="text-body" href="https://mdbootstrap.com/">Contact</a>
+        </div>
+
+        <div class="col-4 align-items-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+
+            <a class="text-body" href="https://mdbootstrap.com/">Social Media</a>
+        </div>
+
+        <div class="col-4 align-items-end p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+        <a class="text-body text-center" href="https://mdbootstrap.com/">Newsletter</a>
+        </div>
+
+      </footer>
 </body>
 </html>
